@@ -9,6 +9,7 @@ Bug fixes:
 ........S. [ZBX-6545] fixed possible SQL errors when syncing a node configuration with PostgreSQL backend version 8.2 and later (Sasha)
 ........S. [ZBX-7452] fixed processing of received events from slave node (Sasha)
 .......... [ZBXNEXT-1256] fixed parameter passing for example userparameter to obtain directory size (Richlv)
+........S. [ZBX-7484] fixed escalations not being stopped and generation of multiple successive OK or PROBLEM events (asaveljevs)
 ........S. [ZBX-7521] fixed crash if value cache entered low memory mode when adding a new item to the cache (wiper)
 ...G...PS. [ZBX-7521] fixed memory allocator realloc() function bug in low memory situations (wiper)
 ...G...PS. [ZBX-4243] fixed Zabbix syslog application names (RFC 5424 APP-NAME) (Andris)
